src/objects/BLP_Prework_Postwork_Template__c.object
<CustomObject>
    <fields>
        <fullName>BLP_Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLP_Course__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Course</label>
        <referenceTo>BLP_Course__c</referenceTo>
        <relationshipName>Pre_Post_Work</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BLP_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLP_Format__c</fullName>
        <label>Format</label>
        <picklist>
            <picklistValues>
                <fullName>Word</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link to External Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist-Quiz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reading Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Link_to_Content__c</fullName>
        <label>Link to Content</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BLP_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BLP_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postwork</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Prework Postwork Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BLP_Completion_Date__c</columns>
        <columns>BLP_Course__c</columns>
        <columns>BLP_Due_Date__c</columns>
        <columns>BLP_Format__c</columns>
        <columns>BLP_Link_to_Content__c</columns>
        <columns>BLP_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Prework Postwork Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prework Postwork Template</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>